2006-01-27  Callum McKenzie  <callum@spooky-possum.org>

	* gnomine.xml: 
	* figures/*.png: Complete rewrite of the documentation in a more
	modern style. Removed all the old figures and replaced them with
	new ones. The work is currently incomplete, the second half is
	nothing more than a rough draft and none of the figures use the
	correct theme.

2006-01-09  Callum McKenzie  <callum@spooky-possum.org>

	* gnomine.xml: Add a note about the pointlessness of high scores
	in custom mode. Minor word tweaks.

2005-07-29  Callum McKenzie  <callum@physics.otago.ac.nz>

	* figures/*:
	* gnomine.xml: Bump the appversion for 2.12 and update the
	screenshots.

2005-05-09  Alan Horkan <horkana tcd ie>

	* gnomine.xml: Removed Known Bugs sections where not needed.	

2005-05-15  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnomine.xml: Document the change in the button that reveals
	surrounding squares.

2005-03-02  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnomine.xml: Bump the app version number. No revisions.

2004-09-09  callum  <callum@spooky-possum.org>

	* figures/*.png:
	* gnomine.xml: Updates for 2.8.

2004-03-04  Callum McKenzie  <callum@physics.otago.ac.nz>

	* figures/*:
	* gnomine.xml: Updates for 2.6.

2003-08-12  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnomine.xml: Added documentation for the new hint item.

2003-08-01  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnomine.xml: Updated for 2.4, including some images.

2003-01-11  Ross Burton  <ross@burtonini.com>

	* gnomine.xml: Remove the use of "figure <xref linkend..." as that
	leads to "figure Figure 1". Closes #90497.

2002-09-20  Ross Burton  <ross@burtonini.com>

	* gnomine.xml: Fix the path to gnomine-won.png, fixing
	#93379. Thanks to Benjamin Thery for pointing this out.

2001-03-20  Gregory Leblanc  <gleblanc@cu-portland.edu>

	* gnome-mines.sgml: Added, fixed minor SGML error, moved images
	into the figures subdirectory, and updated sgml accordingly.