@@ -49,7 +49,6 @@
    <!-- This file  contains link to license for the documentation (GNU FDL), and 
         other legal stuff such as "NO WARRANTY" statement. Please do not change 
 	any of this. -->
-	<!-- FIXME: I want to dual-license with GPL. -->
 
     <authorgroup> 
       <author> 
