@@ -1,4 +1,13 @@
   <legalnotice id="legalnotice">
+        <para>
+	  This document is dual-licensed. You may either distribute
+          and/or modify it under the terms of the <ulink type="help"
+          url="gnome-help:gpl">GNU General Public License</ulink>,
+          which the <link linkend="license">program is licensed</link> 
+          under, or you can distribute it under the terms of the GNU 
+          Free Documentation License. A copy of this follows.
+	</para>
+
 	<para>
 	  Permission is granted to copy, distribute and/or modify this
 	  document under the terms of the GNU Free Documentation
