@@ -1,3 +1,7 @@
+2006-03-07  Callum McKenzie  <callum@spooky-possum.org>
+
+	* legal.xml: Dual license the docs under GPL/GFDL.
+
 2006-01-27  Callum McKenzie  <callum@spooky-possum.org>
 
 	* gnomine.xml: 
